# ciri

./: Cargo.toml  README.md  justfile
core/: Cargo.toml
core/src/: bounding_box.rs  engine.rs  frame.rs  lib.rs  logger.rs  math.rs  object.rs
core/src/camera/: builder.rs  manager.rs  mod.rs  orbit.rs  presets.rs
core/src/lights/: ambient.rs  directional.rs  mod.rs
core/src/macros/: mod.rs  vectors.rs
core/src/model/: material.rs  mod.rs
core/src/options/: engine.rs
core/src/scenes/: game_object.rs  manager.rs  mod.rs
core/src/scenes/components/: mod.rs  renderer.rs  traits.rs
core/src/shapes/: mod.rs  shapes.rs
core/src/structs/: mod.rs  transform.rs  vec3.rs
examples/example-3d/: Cargo.toml
examples/example-3d/src/: main.rs
examples/scenes/: Cargo.toml
examples/scenes/src/: main.rs  rotator.rs
math/: Cargo.toml
math/src/: lib.rs  transform.rs
