[package]
name = "ciri"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/malezjaa/ciri"
readme = "../README.md"
keywords = ["games", "game", "engine", "game-engine", "gameengine"]
categories = ["game-engines", "game-development", "games"]
description = "Simple game engine using three-d"

[dependencies]
three-d = { workspace = true }
three-d-asset = "0.9.2"
ciri_math = { workspace = true }

[lints]
workspace = true

[[example]]
name = "3d"
path = "../examples/example-3d/src/main.rs"
