[package]
name = "ciri"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/malezjaa/ciri"
readme = "../README.md"
keywords = ["games", "game", "engine", "game-engine", "gameengine"]
categories = ["game-engines", "game-development", "games"]
description = "Simple game engine using three-d"

[dependencies]
three-d = { workspace = true }
three-d-asset = { version = "0.9.2", features = ["hdr", "reqwest"] }
ciri_math = { workspace = true }
id-arena = "2.2.1"
anyhow = "1.0.98"
futures = "0.3.31"
log = { workspace = true }
fern = { version = "0.7.1", features = ["colored"] }

[lints]
workspace = true

[[example]]
name = "3d"
path = "../examples/example-3d/src/main.rs"

[[example]]
name = "scenes"
path = "../examples/scenes/src/main.rs"